--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,8 +8,8 @@
                 <ul class="list-unstyled mt-4">
                      <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="#!">المدونة</a></li>
                   <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="#!">الشروط والأحكام</a></li>
-                  <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="#!">عن جو بروبرتى</a></li>
-                  <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="#!">إتصل بنا </a></li>
+                  <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="{% url 'about-page' %}">عن جو بروبرتى</a></li>
+                  <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="{% url 'contact-page' %}">إتصل بنا </a></li>
                   <li class="mb-2"><a class="text-footer fw-bold text-decoration-none" href="#!">الأسئلة الشائعة</a></li>
                 </ul>
               </div>
