--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto pt-2 pt-lg-0 font-base">
-          <li class="nav-item px-2"><a class="nav-link fw-medium active" aria-current="page" href="#destinations"><span class="nav-link-icon text-800 me-1 fas fa-home"></span><span class="nav-link-text">الرئيسية </span></a></li>
+          <li class="nav-item px-2"><a class="nav-link fw-medium active" aria-current="page" href="{% url 'home-page' %}"><span class="nav-link-icon text-800 me-1 fas fa-home"></span><span class="nav-link-text">الرئيسية </span></a></li>
           <li class="nav-item px-2"><a class="nav-link" href="#flights"> <span class="nav-link-icon text-800 me-1 fas fa-map-marker-alt"></span><span class="nav-link-text">كل كمبوندات مصر</span></a></li>
                  <li class="nav-item px-2"><a class="nav-link" href="#flights"> <span class="nav-link-icon text-800 me-1 fas fa-map-marker-alt"></span><span class="nav-link-text"> شقق للبيع </span></a></li>
           <li class="nav-item px-2"><a class="nav-link" href="#hotels"> <span class="nav-link-icon text-800 me-1 fas fa-hotel"></span><span class="nav-link-text">المطورين العقاريين</span></a></li>
