--- a/templates/main/homepage/homepage.html
+++ b/templates/main/homepage/homepage.html
@@ -8,7 +8,7 @@
 {% include 'main/homepage/_whyus.html' %}
 {% include 'main/homepage/_departments.html' %}
 {% include 'main/homepage/_properties.html'  %}
-{% include 'main/homepage/_developers.html' %}
+{% include 'main/homepage/_developers.html' with developers=developers %}
 {% include 'main/homepage/_blogs.html' %}
 {% include 'main/homepage/_compounds.html' %}
 
