--- a/static/assets/css/theme-rtl.css
+++ b/static/assets/css/theme-rtl.css
@@ -18579,10 +18579,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .contact-pic {
   height: 75vh;
 }
+.developers-card {
+      height: 30vh;
+}
 
 @media (min-width: 992px) {
   .contact-pic {
     height: 85vh;
+  }
+  .developers-card {
+        height: 40vh;
   }
 }
 
