--- a/templates/main/contactpage/_contactForm.html
+++ b/templates/main/contactpage/_contactForm.html
@@ -19,8 +19,7 @@
                                                     {% csrf_token %}
                                                     {{ form|crispy }}
                                                    <div class="text-center pt-2">
-                                                    <button class="btn btn-outline-primary btn-sm" type="submit"><span
-                                                            class="text-primary">إرسال</span></button>
+                                                    <button class="btn btn-outline-primary" type="submit">إرسال</button>
                                                    </div>
                                                 {% endif %}
                                             </form>
