--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
         </ul>
         <form>
           <button class="btn text-800 order-1 order-lg-0 me-2 font-nav" type="button">المدونة </button>
-          <button class="btn btn-outline-success btn-sm order-0 font-nav" type="submit"><i class="fab fa-whatsapp fw-semi-bold text-green marg" style="font-size: larger"></i><span class="text-green">واتساب</span></button>
+          <button class="btn btn-outline-success btn-sm order-0 font-nav" id="chat" type="submit"><i class="fab fa-whatsapp fw-semi-bold text-green marg" style="font-size: larger"></i><span class="text-green">واتساب</span></button>
         </form>
       </div>
     </div>
