--- a/templates/main.html
+++ b/templates/main.html
@@ -30,11 +30,19 @@
     </main>
     <script src="{% static 'vendors/@popperjs/popper.min.js' %}"></script>
     <script src="{% static 'vendors/bootstrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'assets/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'vendors/is/is.min.js' %}"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="{% static 'vendors/fontawesome/all.min.js' %}"></script>
     <script src="{% static 'assets/js/theme.js' %}"></script>
-
+  <script>
+        $(() => {
+            $("#chat").on('click' , (e) => {
+                e.preventDefault()
+  window.location.href = "https://api.whatsapp.com/send?phone=01022998805"
+            })
+        });
+</script>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&amp;display=swap" rel="stylesheet">
 </body>
 </html>
